--- a/activmatesApp/templates/create-profile.html
+++ b/activmatesApp/templates/create-profile.html
@@ -20,16 +20,14 @@
 					<legend>
 							Create a Profile!
 					</legend>
-					<div class="form-group first-name">
-							{{ profileForm.picture.label(class="form-control-label") }}
-								{{ profileForm.picture(class="") }}
-								<div class="invalid-feedback">
-									{% if profileForm.picture.errors %}
-									{% for error in profileForm.picture.errors %}
-									<span>{{ error }}</span>
-												{% endfor %}
-								</div>
-								{% endif %}
+					<div class="form-group profile-picture">
+                        {{ profileForm.picture.label() }}
+                        {{ profileForm.picture(class="form-control-label") }}
+                        {% if profileForm.picture.errors %}
+                            {% for error in profileForm.picture.errors %}
+                                <span class="text-danger">{{ error }}</span><br/>
+                            {% endfor %}
+                        {% endif %}
 					</div>
 					<div class="form-group first-name">
                         {{ profileForm.first_name.label(class="form-control-label") }}
