--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -33,6 +33,9 @@
                       <a class="nav-link" href="{{ url_for('main_search') }}">Search</a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('new_activity') }}">Post an activity</a>
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link" href="{{ url_for('account_profile') }}">Profile</a>
                     </li>
                       <li class="nav-item">
