--- a/activmatesApp/templates/main-search.html
+++ b/activmatesApp/templates/main-search.html
@@ -3,12 +3,22 @@
 
 {% block body %}
 <h1>main search page</h1>
-    {% for activity in activities %}
-        <h5>{{ activity.title }}</h5>
-        <h6>{{ activity.author }}</h6>
-        <p>{{ activity.type }}</p>
-    {% endfor %}
 
+     
+        {% for activity in activities %}
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">{{ activity.title }}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">{{ activity.type}}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">{{ user.username }}</h6>
+
+              <p class="card-text">{{ activity.description}}</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+            
+        {% endfor %}
     <script async
     src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap">
     </script>
